@@ -1,4 +1,5 @@
 libmpdclient 2.5 (2010/??/??)
+* playlist: implement the command "listplaylists"
 
 
 libmpdclient 2.4 (2011/01/03)
